fix: fix minos style bug on safari browser

--- a/src/components/Gallery/GalleryItem.module.scss
+++ b/src/components/Gallery/GalleryItem.module.scss
@@ -185,7 +185,7 @@
       right: 0;
       z-index: 1;
       width: fit-content;
-      height: fit-content;
+      height: auto;
       padding: 15px;
       gap: 15px;
       background: transparent;
